--- a/ms/templates/base.html
+++ b/ms/templates/base.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %}merry{% endblock title %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
 
-
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/static/css/ms.css">
+	
+	
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -25,9 +27,54 @@
     {% block more_js %}{% endblock more_js %}
   </head>
 <body>
+    <header>
+    	<div class="container">
+    		<div id="logo-box">
+    			<a href="/">
+    				<img src="" alt="merry logo" />
+    			</a>
+    		</div>
+    		<div class="collapse navbar-collapse">
+    			<ul class="nav navbar-nav navbar-right">
+    				<li id="wechat-qr">
+    					<img src="" alt="wechat" />
+    				</li>
+    				<li id="social">
+    					<img src="" alt="" />
+    					<img src="" alt="" />
+    				</li>
+    				<li>
+    					<p class="navbar-text"><a href="/">中文</a>/<font>EN</font></p>
+    				</li>
+    				<li>
+    					<p class="navbar-text"><a href="/">Contact Us</a></p>
+    				</li>
+    				<li class="dropdown">
+    					<a href="/">Login</a>
+    				</li>
+    			</ul>
+    		</div>
+    	</div>
+    </header>
 {% block content %}
         <p>Use this document as a way to quick start any new project.</p>
 {% endblock content %}
+	<div style="clear:both;"></div>
+	<footer>
+		<section class="footer-line">
+			<div class="container">
+				<ul id="f-ul">
+					<li><a href="/">@2014 Merry Services.com</a></li>
+					<li><a href="/">Icp License</a></li>
+					<li><a href="/">Terms of Service</a></li>
+					<li><a href="/">Privacy Policy</a></li>
+				</ul>
+			</div>
+		</section>
+	</footer>
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/headroom.js"></script>
 {% block extra_js %}{% endblock extra_js %}
 </body>
 </html>
