--- a/ms/templates/home/index.html
+++ b/ms/templates/home/index.html
@@ -1,4 +1,126 @@
 {% extends "base.html" %}
+{% block extra_css %}
+<link rel="stylesheet" href="/static/css/home.css">
+<link rel="stylesheet" href="/static/css/jquery.datetimepicker.css">
+{% endblock extra_css %}
 {% block content %}
-hello world!
+<div class="carousel slide bigeye">
+  <!-- Indicators
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+	 -->
+  <!-- Wrapper for slides -->
+  <ul class="carousel-inner">
+  	
+    <li class="item active">
+      <img src="/static/img/1.jpg" alt="image 1">
+    </li>
+    <li class="item">
+      <img src="/static/img/2.jpg" alt="image 2">
+    </li>
+    <li class="item">
+      <img src="/static/img/3.jpg" alt="image 2">
+    </li>
+  </ul>
+  <!-- Controls
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+   -->
+</div>
+<div class="book-area">
+	<div class="book-container">
+		<div class="welcome-area">
+			<div class="blk-middle">
+				<h1>WANT A CLEAN HOME?</h1>
+				<p>BOOK ONLINE OR SPEAK TO AN <u>ENGLISH SPEAKING REPRESENTATIVE</u></p>
+				<a href="#" class="btn btn-contrast btn-large how-it-works">HOW IT WORKS</a>
+      		</div>
+		</div>
+		<div class="set-area">
+      		<div class="choose-box">
+      			<input type="text" class="date-box"><span class="glyphicon glyphicon-calendar"></span>
+      			<input type="text" class="time-box"><span class="glyphicon glyphicon-time"></span>
+      			<select id="type-box" name="guests">
+      				<option value="1">One Time</option>
+            	</select>
+            	<button>BOOK NOW</button>
+      		</div>
+		</div>
+	</div>
+</div>
+<div class="container fea-area">
+	<ul>
+		<li>
+			<img src="" alt="f1" />
+			<p>100% Satisfaction Guarantee</p>
+			<font>Learn More</font>
+		</li>
+		<li>
+			<img src="" alt="f2" />
+			<p>Professionally trained and certified cleaners</p>
+			<font>Learn More</font>
+		</li>
+		<li>
+			<img src="" alt="f3" />
+			<p>Insured and Bonded</p>
+			<font>Learn More</font>
+		</li>
+		<li>
+			<img src="" alt="f4" />
+			<p>Trust & Safety</p>
+			<font>Learn More</font>
+		</li>
+		<li>
+			<img src="" alt="f5" />
+			<p>English-speaking Customer Service</p>
+			<font>Learn More</font>
+		</li>
+	</ul>
+</div>
+<div class="container info-area">
+	<ul>
+		<li>
+			<img src="" alt="f1" />
+			<p>1. BOOK</p>
+			<font>Tell us when you want to clean your home</font>
+		</li>
+		<li>
+			<img src="" alt="f2" />
+			<p>2. CLEAN</p>
+			<font>Professionally certified cleaner cleans your place</font>
+		</li>
+		<li>
+			<img src="" alt="f3" />
+			<p>3. ENJOY</p>
+			<font>Come home to a speaking clean home</font>
+		</li>
+	</ul>
+</div>
 {% endblock content %}
+{% block extra_js %}
+<script src="/static/js/jquery.datetimepicker.js"></script>
+<script>
+$('.date-box').datetimepicker({
+	timepicker:false,
+	format:'Y/d/m'
+	});
+$('.time-box').datetimepicker({
+	datepicker:false,
+	format:'H:i',
+	step:60
+	});
+$('.carousel').carousel({
+	interval: 2000,
+	pause: false
+	})
+</script>
+{% endblock extra_js %}
