--- a/ms/templates/base.html
+++ b/ms/templates/base.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %}merry{% endblock title %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-
+    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/css/ms.css">
 	
@@ -31,13 +30,13 @@
     	<div class="container">
     		<div id="logo-box">
     			<a href="/">
-    				<img src="" alt="merry logo" />
+    				<img src="/static/img/site-logo.png" alt="merry logo" />
     			</a>
     		</div>
     		<div class="collapse navbar-collapse">
     			<ul class="nav navbar-nav navbar-right">
     				<li id="wechat-qr">
-    					<img src="" alt="wechat" />
+    					<img src="/static/img/qr.png" alt="wechat" />
     				</li>
     				<li id="social">
     					<img src="" alt="" />
