--- a/ms/static/css/home.css
+++ b/ms/static/css/home.css
@@ -2,28 +2,28 @@
 	padding:0;
 }
 .carousel-inner li{
-	height:600px;
+	height:350px;
 }
 .carousel-inner .item img{
 	width:100%;
-	height:600px;
+	height:350px;
 }
 .bigeye{
 	z-index: -1;
 	position: absolute;
 	right: 0;
 	left: 0;
-	top: 105px;
-	height: 600px;
+	top: 95px;
+	height: 350px;
 	overflow: hidden;
 	min-width: 1045px;
 }
 .book-area{
 	position: relative;
-	height: 600px;
+	height: 350px;
 	width: 100%;
 	min-width: 1045px;
-	top: 105px;
+	top: 95px;
 }
 .book-container{
 	height: 100%;
@@ -37,7 +37,7 @@
 	display: table;
 	width: 100%;
 	height: 100%;
-	padding-bottom: 102px;
+	padding-bottom: 86px;
 }
 .set-area{
 	background: rgba(0,0,0,0.6);
@@ -46,7 +46,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	padding: 25px;
+	padding: 20px;
 	text-align: center;
 }
 .blk-middle{
@@ -80,6 +80,7 @@
 	color: #fff;
 }
 .choose-box{
+	font-weight: bold;
 	padding:5px;
 	background-color: #fff;
 	opacity: 1;
@@ -110,28 +111,31 @@
 	padding:10px 12px 10px 5px;
 }
 .fea-area{
-	margin-top:105px;
-	padding:40px 0;
+	margin-top:95px;
+	padding:25px 0;
 }
 .fea-area ul{
+	width:100%;
 	padding: 10px 0;
 	margin-bottom: 0;
 	list-style: none;
+	overflow: hidden;
 }
 .fea-area ul li{
+	width:20%;
 	padding:0 35px;
 	float:left;
 	text-align:center;
 }
 .fea-area ul li img{
-	width:160px;
-	height:160px;
+	width:150px;
+	height:150px;
 }
 .fea-area ul li p{
-	width:160px;
-	height:95px;
-	font-size:18px;
-	padding:10px;
+	width:100%;
+
+	font-size:16px;
+
 	margin:0;
 }
 .fea-area ul li font{
@@ -145,6 +149,8 @@
 	padding: 10px 0;
 	margin-bottom: 0;
 	list-style: none;
+	overflow:hidden;
+	margin-bottom:25px;
 }
 .info-area ul li{
 	width:33%;
@@ -162,4 +168,37 @@
 }
 .info-area ul li font{
 	font-size:12px;
+}
+.input-group {
+	position: relative;
+	display: inline-table;
+	border-collapse: separate;
+	cursor:pointer;
+}
+.date-box{
+	cursor:pointer;
+	width:240px;
+}
+.time-box{
+	cursor:pointer;
+	width:140px;
+}
+.input-group-addon {
+	top: 1px;
+	right: 15px;
+	position: absolute;
+	padding: 10px 12px;
+	border: 0;
+	background-color: #FFF;
+	display: inline-table;
+	z-index: 99;
+}
+#wi{
+	text-align: center;
+}
+.home-wi{
+	background: #fff;
+	color:#000;
+	font-size:22px;
+	padding:10px 100px;
 }
