--- a/ms/static/css/ms.css
+++ b/ms/static/css/ms.css
@@ -1,7 +1,7 @@
 /*! project specific CSS goes here. */
 header{
 	background: #fff;
-	border-bottom: 15px solid #55DCCD;
+	border-bottom: 5px solid #55DCCD;
 	position: fixed;
 	top:0;
 	left:0;
@@ -19,10 +19,6 @@ header a{
 	padding: 20px 15px;
 	font-size: 18px;
 	line-height: 20px;
-}
-#logo-box a img{
-	width:200px;
-	height:50px;
 }
 header .navbar-text{
 	margin-top:35px;
@@ -54,6 +50,7 @@ header ul.navbar-right li.dropdown {
 	height: 22px;
 }
 .footer-line{
+	margin-top:25px;
 	padding:25px 0;
 	background-color:#1B1B1B;
 }
@@ -61,6 +58,8 @@ header ul.navbar-right li.dropdown {
 	list-style: none;
 	float:left;
 	width:100%;
+	margin:0;
+	padding:0;
 }
 #f-ul li{
 	float:left;
@@ -72,4 +71,7 @@ header ul.navbar-right li.dropdown {
 }
 #f-ul li a:hover{
 	color:#52CCB7;
+}
+.page-box{
+	margin-top:95px
 }
