--- a/ms/templates/base.html
+++ b/ms/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}merry{% endblock title %}</title>
+    <title>{% block title %}Merry Cleaning Services | Luxury Ayi Cleaning Shanghai{% endblock title %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
