--- a/ms/templates/home/info.html
+++ b/ms/templates/home/info.html
@@ -58,7 +58,7 @@
 			{% csrf_token %}
 			<ul class="form-inner">
 				<li class="form-fields">
-					<font>Name</font>
+					<font>Full Name</font>
 					{{ form.username }}
 					{{ form.username.errors }}
 				</li>
@@ -69,7 +69,7 @@
 				</li>
 				<li class="make-line"></li>
 				<li class="form-fields">
-					<font>Mobile No.</font>
+					<font>Mobile #</font>
 					{{ form.mobile }}
 					{{ form.mobile.errors }}
 				</li>
@@ -91,7 +91,7 @@
 				</li>
 				<li class="make-line"></li>
 				<li class="form-fields">
-					<font>Street No.</font>
+					<font>Street #</font>
 					{{ form.street_num }}
 					{{ form.street_num.errors }}
 				</li>
@@ -107,13 +107,13 @@
 					{{ form.cross.errors }}
 				</li>
 				<li class="form-fields">
-					<font>Bldg. No.<span class="optional-area">(Optional)</span></font>
+					<font>Building #<span class="optional-area">(Optional)</span></font>
 					{{ form.bldg_num }}
 					{{ form.bldg_num.errors }}
 				</li>
 				<li class="make-line"></li>
 				<li class="form-fields">
-					<font>Apt. No.<span class="optional-area">(Optional)</span></font>
+					<font>Apartment #<span class="optional-area">(Optional)</span></font>
 					{{ form.apt_num }}
 					{{ form.apt_num.errors }}
 				</li>
@@ -134,6 +134,3 @@
 	</div>
 </div>
 {% endblock content %}
-{% block extra_js %}
-
-{% endblock extra_js %}
