--- a/ms/templates/booking/history.html
+++ b/ms/templates/booking/history.html
@@ -8,7 +8,7 @@
 <div id="r-column">
 	<h5><a href="{% url 'userena_profile_edit' user.username %}">My Account</a></h5>
 	<h5 id="a-active">Cleaning History</h5>
-	<h5><a href="{% url 'userena_signout'%}">Log Out</a></h5>
+	<h5><a href="{% url 'userena_signout'%}">Sign Out</a></h5>
 	<div id="a-box">
 		<div id="a-type">Account B</div>
 		<div id="a-rest">5,000 RMB</div>
