--- a/ms/templates/booking/needs.html
+++ b/ms/templates/booking/needs.html
@@ -18,7 +18,7 @@
 	                 </div>
 				</div>
 				<div class="col-md-2">
-					 <div class="service_border bdr-default"></div>
+					 <div class="service_border bdr-blue"></div>
 	                 <div class="service_icon active">
 	                        2
 	                 </div>
@@ -28,10 +28,10 @@
 				</div>
 				<div class="col-md-2">
 					 <div class="service_border bdr-default"></div>
-	                 <div class="service_icon default">
+	                 <div class="service_icon active">
 	                        3
 	                 </div>
-	                 <div class="service_content text-default">
+	                 <div class="service_content">
 	                     <h3>Cleaning <br> needs</h3>
 	                 </div>
 				</div>
